ci: adding release triggers for new packages

--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -11,6 +11,8 @@ on:
           - affected
           - all
           - nextjs-mf
+          - runtime
+          - sdk
           - node
           - storybook-addon
           - typescript
